# road-editor

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  curve.json  curve.md  imgui.ini
.claude/: settings.json
data/: project.json  roads.json  view_settings.json
data/testtrack/: testtrack_project.roadproj  testtrack_road.roadnet
data/testtrack/old_format/: curve_test.json
data/toscana/: toscana.roadproj  toscana_road.roadnet
docs/: calc_centrifugal.vfl  calc_curvature_XZ.vfl  calc_half_vector.vfl  clothoid_3points.vfl  clothoid_3points_chat.md  color_by_slope.vfl  curve_sample2.json  intersection.md  intersection_sample.json  plan.md  prim_to_vertical_curve.vfl
memory/: MEMORY.md
shaders/: common.hlsli  grid_ps.hlsl  grid_vs.hlsl  line_ps.hlsl  line_vs.hlsl  terrain_ps.hlsl  terrain_shadow_vs.hlsl  terrain_vs.hlsl
src/: App.cpp  App.h  app.rc  main.cpp
src/editor/: EditorState.h  PolylineEditor.cpp  PolylineEditor.h  RoadData.cpp  RoadData.h
src/renderer/: Buffer.h  D3D11Context.cpp  D3D11Context.h  DebugDraw.cpp  DebugDraw.h  Shader.cpp  Shader.h
src/scene/: Camera.cpp  Camera.h  Grid.cpp  Grid.h  Terrain.cpp  Terrain.h
src/ui/: ImGuiLayer.cpp  ImGuiLayer.h
